--- a/index.html
+++ b/index.html
@@ -3,28 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Home</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
+    <title>Welcome to My Professional Site</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Site!</h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section id="about" data-aos="fade-up">
-            <h2>About Me</h2>
-            <p>Your bio goes here.</p>
-        </section>
-        <section id="social-media" data-aos="fade-down">
-            <h2>Connect With Me</h2>
-            <!-- Links to your social media profiles -->
-        </section>
-    </main>
+    <section id="home" class="hero">
+        <h1>Welcome to My Professional Site</h1>
+        <p>Your trusted partner in [Your Service Domain].</p>
+    </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are committed to delivering excellence in [Your Industry/Field].</p>
+    </section>
+    <section id="services" class="grid">
+        <div class="grid-item">
+            <h3>Service 1</h3>
+            <p>Detail about your first service.</p>
+        </div>
+        <div class="grid-item">
+            <h3>Service 2</h3>
+            <p>Detail about your second service.</p>
+        </div>
+        <div class="grid-item">
+            <h3>Service 3</h3>
+            <p>Detail about your third service.</p>
+        </div>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
     <footer>
-        <p>Copyright © Your Name 2024</p>
+        <p>Copyright © [Your Name/Company] 2024</p>
     </footer>
-    <script src="scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
