--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
     <section id="about">
         <h2>About Us</h2>
-        <p>We are committed to delivering excellence in [Your Industry/Field].</p>
+        <p>My sister Sangita and I, help people build a fulfilling life..</p>
     </section>
     <section id="services" class="grid">
         <div class="grid-item">
@@ -49,7 +49,7 @@
         </form>
     </section>
     <footer>
-        <p>Copyright © [Your Name/Company] 2024</p>
+        <p>Copyright © Nitish Ray 2024</p>
     </footer>
     <script src="script.js"></script>
 </body>
