--- a/index.html
+++ b/index.html
@@ -17,36 +17,8 @@
             </ul>
         </nav>
     </header>
-    <section id="home" class="hero">
-        <h1>Welcome to My Professional Site</h1>
-        <p>Your trusted partner in [Your Service Domain].</p>
-    </section>
-    <section id="about">
-        <h2>About Us</h2>
-        <p>My sister Sangita and I, help people build a fulfilling life..</p>
-    </section>
-    <section id="services" class="grid">
-        <div class="grid-item">
-            <h3>Service 1</h3>
-            <p>Detail about your first service.</p>
-        </div>
-        <div class="grid-item">
-            <h3>Service 2</h3>
-            <p>Detail about your second service.</p>
-        </div>
-        <div class="grid-item">
-            <h3>Service 3</h3>
-            <p>Detail about your third service.</p>
-        </div>
-    </section>
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+    <section id="home" class="coming-soon">
+        <h1>COMING SOON</h1>
     </section>
     <footer>
         <p>Copyright © Nitish Ray 2024</p>
